<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="16dp"
    android:background="@color/md_yellow_A200"
    android:orientation="vertical">

    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="64dp"
        android:src="@mipmap/app_icon_alpha"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_slogan"/>

    <EditText
        android:id="@+id/phone_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:singleLine="true"
        android:inputType="phone"
        android:textSize="@dimen/text_size_normal"
        android:hint="@string/auth_phone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/verify_code_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:singleLine="true"
            android:textSize="@dimen/text_size_normal"
            android:hint="@string/auth_verify_code"/>

        <Button
            android:id="@+id/get_verify_code_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/auth_get_verify_code"/>
    </LinearLayout>

    <Button
        android:id="@+id/auth_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_black_1000"
        android:textColor="@color/md_white_1000"
        android:layout_marginTop="24dp"
        android:text="@string/auth_auth"/>

</LinearLayout>