<?xml version="1.0" encoding="utf-8"?>
<com.imooc.openmind.widget.AnimateFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth_phone_layout"
    android:layout_width="300dp"
    android:layout_height="500dp"
    android:background="@color/md_yellow_A200"
    tools:showIn="@layout/activity_auth">

    <LinearLayout
        android:id="@+id/highlight_phone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/logo_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@mipmap/app_icon_alpha"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_slogan"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/phone_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/auth_phone"
                android:inputType="phone"
                android:singleLine="true"
                android:textSize="@dimen/text_size_normal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/verify_code_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/auth_verify_code"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_normal"/>

                <TextView
                    android:id="@+id/get_verify_code_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auth_get_verify_code"/>
            </LinearLayout>

            <Button
                android:id="@+id/auth_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/md_black_1000"
                android:text="@string/auth_auth"
                android:textColor="@color/md_white_1000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="点击登录/注册，代表阅读和统一OPEMIND的用户协议"
                android:textSize="@dimen/text_size_micro"/>

        </LinearLayout>

    </LinearLayout>

    <com.joanzapata.iconify.widget.IconTextView
        android:id="@+id/normal_phone_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="{fa-phone}"
        android:textColor="@color/md_black_1000"
        android:textSize="@dimen/text_size_display_x"
        android:visibility="gone"/>

    <View
        android:layout_width="4dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:background="@color/md_black_1000"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_gravity="bottom"
        android:background="@color/md_black_1000"/>
</com.imooc.openmind.widget.AnimateFrameLayout>