<?xml version="1.0" encoding="utf-8"?>
<com.imooc.openmind.widget.AnimateFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth_sns_layout"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_gravity="right|bottom"
    android:background="@color/sns_bg_color"
    tools:showIn="@layout/activity_auth">

    <LinearLayout
        android:id="@+id/highlight_sns_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.joanzapata.iconify.widget.IconTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="{fa-weixin}"
                android:textColor="@color/md_black_1000"
                android:textSize="@dimen/text_size_display_x"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/auth_wechat"
                android:textColor="@color/md_black_1000"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/md_black_1000"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.joanzapata.iconify.widget.IconTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="{fa-weibo}"
                android:textColor="@color/md_black_1000"
                android:textSize="@dimen/text_size_display_x"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/auth_weibo"
                android:textColor="@color/md_black_1000"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/normal_sns_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.joanzapata.iconify.widget.IconTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="{fa-weixin} {fa-weibo}"
            android:textColor="@color/md_black_1000"
            android:textSize="@dimen/text_size_large"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_sns_platform_name"
            android:textColor="@color/md_black_1000"/>

    </LinearLayout>


    <View
        android:layout_width="4dp"
        android:layout_height="match_parent"
        android:background="@color/md_black_1000"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/md_black_1000"/>


</com.imooc.openmind.widget.AnimateFrameLayout>